# hwio-types

./: Cargo.toml  README.md
src/: lib.rs
src/defs/: mod.rs  zeroing.rs
src/defs/complex/: mod.rs  potentiometer.rs  rotary_sensor.rs  speed_controller.rs
src/defs/simple/: analog.rs  angle.rs  digital.rs  mod.rs  percent.rs  periodic.rs  velocity.rs
